--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   </head>
   <body>
     <h1>ポートフォリオサイト</h1>
+    <h1>自己紹介</h1>
+    <div>
+      <br />
+      名前：内山 祥太（うちやま しょうた）<br />
+      年齢：22歳<br />
+      大学：名古屋大学 <br />
+      研究科：大学院情報学研究科 複雑系科学専攻
+    </div>
+    <h1>趣味</h1>
+    <div>
+      <br />
+      野球<br />
+      音楽鑑賞<br />
+      ゲーム <br />
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
