--- a/index.html
+++ b/index.html
@@ -9,21 +9,55 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <h1>ポートフォリオサイト</h1>
-    <h1>自己紹介</h1>
-    <div>
-      <br />
-      名前：内山 祥太（うちやま しょうた）<br />
-      年齢：22歳<br />
-      大学：名古屋大学 <br />
-      研究科：大学院情報学研究科 複雑系科学専攻
-    </div>
-    <h1>趣味</h1>
-    <div>
-      <br />
-      野球<br />
-      音楽鑑賞<br />
-      ゲーム <br />
+    <div class="header">My Portfolio</div>
+
+    <div class="main">
+      <div class="section-title">My Profile</div>
+      <div class="content">
+        <div class="profiles">
+          <ul>
+            <li>名前：　　内山 祥太（うちやま しょうた）</li>
+            <li>年齢：　　22歳</li>
+            <li>誕生日：　12月5日</li>
+            <li>出身：　　愛知県春日井市</li>
+            <li>大学：　　名古屋大学大学院 情報学研究科</li>
+          </ul>
+        </div>
+        <div class="my-picture">
+          <img
+            src="C:\Users\Uchiyama\dev\webex\my-portfolio\images\my_picture.jpg"
+          />
+        </div>
+      </div>
+
+      <div class="section-title">University</div>
+      <div class="content">
+        <p>
+          名古屋大学大学院情報学研究科<br />大学HP：<a
+            href="https://www.nagoya-u.ac.jp/"
+            target="_blank"
+            >名古屋大学</a
+          >
+          <br />学部・研究科HP：大学HP：<a
+            href="https://www.i.nagoya-u.ac.jp/"
+            target="_blank"
+            >名古屋大学情報学部・大学院情報学研究科</a
+          >
+        </p>
+      </div>
+      <div class="my-univ"></div>
+
+      <div class="section-title">Hobby</div>
+      <div class="content">
+        <h1>野球</h1>
+        <p>
+          小中高大と約13年間野球をやってきました！中日ドラゴンズファンです！
+        </p>
+      </div>
+      <div class="content">
+        <h1>音楽鑑賞</h1>
+        <p>fripSideというユニットにはまっています！</p>
+      </div>
     </div>
     <script src="main.js"></script>
   </body>
