--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <div class="main">
       <div class="section-title">My Profile</div>
       <div class="content">
-        <div class="profiles">
-          <ul>
-            <li>名前：　　内山 祥太（うちやま しょうた）</li>
-            <li>年齢：　　22歳</li>
-            <li>誕生日：　12月5日</li>
-            <li>出身：　　愛知県春日井市</li>
-            <li>大学：　　名古屋大学大学院 情報学研究科</li>
-          </ul>
-        </div>
-        <div class="my-picture">
-          <img
-            src="C:\Users\Uchiyama\dev\webex\my-portfolio\images\my_picture.jpg"
-          />
+        <div class="self-intro">
+          <div class="profiles">
+            <ul>
+              <li>名前：　　内山 祥太（うちやま しょうた）</li>
+              <li>年齢：　　22歳</li>
+              <li>誕生日：　12月5日</li>
+              <li>出身：　　愛知県春日井市</li>
+              <li>大学：　　名古屋大学大学院 情報学研究科</li>
+            </ul>
+          </div>
+          <div class="my-picture">
+            <img src="images\my_picture.jpg" alt="私の写真" />
+          </div>
         </div>
       </div>
 
@@ -44,6 +44,12 @@
             >名古屋大学情報学部・大学院情報学研究科</a
           >
         </p>
+        <div class="univ-picture">
+          <img
+            src="https://portraits.niad.ac.jp/univ/outline/images/0260_0001_%E3%82%AD%E3%83%A3%E3%83%B3%E3%83%91%E3%82%B9%E3%81%AE%E5%A4%96%E8%A6%B31.jpg"
+            alt="大学の写真"
+          />
+        </div>
       </div>
       <div class="my-univ"></div>
 
@@ -53,10 +59,22 @@
         <p>
           小中高大と約13年間野球をやってきました！中日ドラゴンズファンです！
         </p>
+        <div class="dome-picture">
+          <img
+            src="https://www.aichi-now.jp/upload/spot_images/a30283247e8ecc419908776e1797d210.jpg"
+            alt="ドームの写真"
+          />
+        </div>
       </div>
       <div class="content">
         <h1>音楽鑑賞</h1>
         <p>fripSideというユニットにはまっています！</p>
+        <div class="frip-picture">
+          <img
+            src="https://www.billboard-japan.com/scale/news/00000128/128154/800x_image.jpg"
+            alt="fripSideの写真"
+          />
+        </div>
       </div>
     </div>
     <script src="main.js"></script>
