--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
               <li>大学：　　名古屋大学大学院 情報学研究科</li>
             </ul>
           </div>
-          <div class="my-picture">
-            <img src="images\my_picture.jpg" alt="私の写真" />
-          </div>
+          <img src="images\my_picture.jpg" alt="私の写真" class="my-picture" />
         </div>
       </div>
 
@@ -44,12 +42,11 @@
             >名古屋大学情報学部・大学院情報学研究科</a
           >
         </p>
-        <div class="univ-picture">
-          <img
-            src="https://portraits.niad.ac.jp/univ/outline/images/0260_0001_%E3%82%AD%E3%83%A3%E3%83%B3%E3%83%91%E3%82%B9%E3%81%AE%E5%A4%96%E8%A6%B31.jpg"
-            alt="大学の写真"
-          />
-        </div>
+        <img
+          src="https://portraits.niad.ac.jp/univ/outline/images/0260_0001_%E3%82%AD%E3%83%A3%E3%83%B3%E3%83%91%E3%82%B9%E3%81%AE%E5%A4%96%E8%A6%B31.jpg"
+          alt="大学の写真"
+          class="univ-picture"
+        />
       </div>
       <div class="my-univ"></div>
 
